<resources>
    <string name="app_name">GaryslistAndroidApp</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_text">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="placeholder_desc">This is a ramdom discription of what the application does and why you should download it!</string>
    <string name="empty_fields">Text fields cannot be empty.</string>
    <string name="ok_text">OK</string>
    <string name="no_network">You have no network connection.</string>
</resources>
