<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        tools:context=".AuthActivity"
        android:layout_height="match_parent"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            >
        <Button
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_signup_button"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                />
        <Button
                android:text="@string/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_login_button"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            >
        <ImageView
                android:contentDescription="@null"
                android:layout_width="200dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/logo_image"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                />

        <TextView
                android:text="@string/placeholder_desc"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc_text"
                android:textAlignment="center"
                />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>